<resources>
    <string name="app_name">zuraaapps</string>
    <string name="zuraa"><b>Zuraa </b><i>Apps</i></string>
    <string name="textMulai">Mulai</string>
    <string name="textLanjut">Lanjut</string>
    <string name="hello">Hello</string>
    <string name="zulhaqi">Zulhaqi</string>
    <string name="mencari_sesuatu">Mencari Sesuatu? foto atau musik</string>
    <string name="namaku">Muhamad Zulhaqi</string>
    <string name="deskripsi">Halo saya adalah seorang developer android pemula yang tidak tau harus apa :)</string>
    <string name="hobby">Hobby</string>
    <string name="desciption_hobby">Coding, Gaming, dan Traveling</string>
    <string name="home">Home</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="makes_mikes">Makes/Mikes</string>
    <string name="makesfav">Burger dan Es Campur</string>
    <string name="interest">Interest</string>
    <string name="interestFav">Android Developers</string>
    <string name="dokter_spesialis">Dokter Spesialis Otak</string>
    <string name="cita_cita">Cita-Cita</string>
    <string name="robotic_dan_ai_computing">Robotic dan AI Computing</string>
    <string name="Daily">Daily Activity</string>
    <string name="wakeup">Bangun Tidur</string>
    <string name="sarapan">Sarapan</string>
    <string name="minum_kopi">Minum kopi</string>
    <string name="jogging">Lari pagi</string>
    <string name="study">Belajar</string>
    <string name="music_videos">Music and Videos</string>
    <string name="stereoHeart">Stereo Heart - Gym Class Heroes\nft. Adam Levine</string>
    <string name="akumaNoKo">ヒグチアイ / 悪魔の子 (アニメスペシャルVer.) \nAi Higuchi</string>
    <string name="eve">お気に召すまま \nEve</string>
    <string name="facebook">Muhamad Zulhaqi</string>
    <string name="gmail">muhamadzulhaqi@gmail.com</string>
    <string name="about">About</string>
    <string name="find_me">Find Me</string>

</resources>